Le site de la patate
patate

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,9 @@
 <body>
 
     <div class="container">
-        <h1>Mini site Web avec Express !</h1>
-        <p>Bienvenue sur le site</p>
+        <h1>POTATOES </h1>
+        <h2>Le Site n°1 de revente de patate</h2> 
+        <p>Parce que la Patate c'est un metier</p>
 
         <a href="/login" class="btn">
             Connexion
